--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         svg {
             background-color: #FAFAFA;
         }
+
+        .node-circle:hover {
+            fill: #fff;
+            stroke-width: 3px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
