--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
             cursor: pointer;
         }
 
+        circle.organization {
+            fill: #fff;
+            stroke: black;
+        }
+
+        circle.people {
+            fill: #808080;
+            stroke: #808080;
+        }
+
         .sidenav {
             height: 100%;
             width: 0;
