--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         svg {
             background-color: #FAFAFA;
         }
+        
+        .sidenav h1 {
+            margin-top: 0px;
+        }
 
         .node-circle:hover {
             fill: #fff;
