--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         svg {
             background-color: #FAFAFA;
         }
-        
+
         .sidenav h1 {
             margin-top: 0px;
         }
@@ -96,12 +96,12 @@
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="subtitle org">Référenze Faits &amp; Document: <span href="#" id="referenceOrg" class="item"></span></div>
-        <div class="subtitle people">Position: <span id="position" class="item"></span></div>
-        <div class="subtitle people">Groupe: <span id="group" class="item"></span></div>
-        <div class="subtitle people">Scolarité: <span href="#" id="education" class="item"></span></div>
-        <div class="subtitle people">Religion: <span id="religion" class="item"></span></div>
-        <div class="subtitle people">Référenze Faits &amp; Document:<span id="reference" class="item"></span></div>
+        <div class="subtitle org">Faits &amp; Documents : <span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle people">Position : <span id="position" class="item"></span></div>
+        <div class="subtitle people">Groupe : <span id="group" class="item"></span></div>
+        <div class="subtitle people">Scolarité : <span href="#" id="education" class="item"></span></div>
+        <div class="subtitle people">Religion : <span id="religion" class="item"></span></div>
+        <div class="subtitle people">Faits &amp; Documents :<span id="reference" class="item"></span></div>
     </div>
     <div class="container centered">
         <div id="myGraph"></div>
@@ -130,7 +130,7 @@
             }
             document.getElementById("sidenav").style.width = "250px";
         }
-        
+
         /* Set the width of the side navigation to 0 */
         function closeNav() {
             document.getElementById("sidenav").style.width = "0";
