--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 25px;
-            color: #818181;
+            color: #fff;
             display: block;
             transition: 0.3s;
         }
 
         .sidenav .subtitle {
-            color: #818181;
+            color: #fff;
             font-size: 25px;
             padding-left: 5px;
         }
 
         .sidenav .title {
-            color: #818181;
+            color: #fff;
             padding-left: 5px;
         }
 
@@ -96,12 +96,12 @@
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="subtitle org">Faits &amp; Documents : <span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle org"><i>Faits &amp; Documents</i> : <span href="#" id="referenceOrg" class="item"></span></div>
         <div class="subtitle people">Position : <span id="position" class="item"></span></div>
         <div class="subtitle people">Groupe : <span id="group" class="item"></span></div>
         <div class="subtitle people">Scolarité : <span href="#" id="education" class="item"></span></div>
         <div class="subtitle people">Religion : <span id="religion" class="item"></span></div>
-        <div class="subtitle people">Faits &amp; Documents :<span id="reference" class="item"></span></div>
+        <div class="subtitle people"><i>Faits &amp; Documents</i> :<span id="reference" class="item"></span></div>
     </div>
     <div class="container centered">
         <div id="myGraph"></div>
