--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             cursor: pointer;
         }
 
-        circle.organization {
+        circle.node-organization {
             fill: #808080;
             stroke: #808080;
         }
 
-        circle.people {
+        circle.node-people {
             fill: #fff;
             stroke: black;
         }
