--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
             position: fixed;
             z-index: 1;
             top: 0;
-            left: 0;
+            right: 0;
             background-color: #111;
             overflow-x: hidden;
-            transition: 0.5s;
+            transition: 0.3s;
             padding-top: 60px;
         }
 
         .sidenav .item, .sidenav .closebtn {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
-            font-size: 25px;
+            font-size: 18px;
+            font-family: 'Open Sans',Helvetica,Arial,sans-serif;
             color: #fff;
             display: block;
             transition: 0.3s;
@@ -59,13 +60,16 @@
 
         .sidenav .subtitle {
             color: #fff;
-            font-size: 25px;
+            font-size: 18px;
             padding-left: 5px;
+            font-family: 'Open Sans',Helvetica,Arial,sans-serif;
         }
 
         .sidenav .title {
             color: #fff;
             padding-left: 5px;
+            font-size: 24px;
+            font-family: 'Oswald', sans-serif;
         }
 
         .sidenav .item:hover, .sidenav .closebtn:hover {
