--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         .sidenav .subtitle {
             color: #fff;
             font-size: 18px;
-            padding-left: 5px;
+            padding-right: 5px;
             font-family: 'Open Sans',Helvetica,Arial,sans-serif;
         }
 
         .sidenav .title {
             color: #fff;
-            padding-left: 5px;
+            padding-right: 5px;
             font-size: 24px;
             font-family: 'Oswald', sans-serif;
         }
@@ -133,7 +133,7 @@
                 d3.selectAll('.org').style('display', 'block')
                 d3.selectAll('.people').style('display', 'none')
             }
-            document.getElementById("sidenav").style.width = "250px";
+            document.getElementById("sidenav").style.width = "450px";
         }
 
         /* Set the width of the side navigation to 0 */
