--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         .sidenav .item, .sidenav .closebtn {
-            padding: 8px 8px 8px 32px;
+            padding: 8px 32px 8px 8px;
             text-decoration: none;
             font-size: 18px;
             font-family: 'Open Sans',Helvetica,Arial,sans-serif;
@@ -61,13 +61,13 @@
         .sidenav .subtitle {
             color: #fff;
             font-size: 18px;
-            padding-right: 5px;
-            font-family: 'Open Sans',Helvetica,Arial,sans-serif;
+            padding-left: 15px;
+            font-family: 'Oswald', sans-serif;
         }
 
         .sidenav .title {
             color: #fff;
-            padding-right: 5px;
+            padding-left: 15px;
             font-size: 24px;
             font-family: 'Oswald', sans-serif;
         }
@@ -81,11 +81,11 @@
             top: 0;
             right: 25px;
             font-size: 36px;
-            margin-left: 50px;
+            margin-right: 50px;
         }
 
         #main {
-            transition: margin-left .5s;
+            transition: margin-right .3s;
             padding: 16px;
         }
 
