--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         .sidenav .item, .sidenav .closebtn {
-            padding: 8px 32px 8px 8px;
+            padding: 15px 15px 15px 0px;
             text-decoration: none;
             font-size: 18px;
             font-family: 'Open Sans',Helvetica,Arial,sans-serif;
@@ -100,13 +100,13 @@
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="subtitle org"><i>Faits &amp; Documents</i> : <span href="#" id="referenceOrg" class="item"></span></div>
-        <div class="subtitle people">▶ Position : <span id="position" class="item"></span></div>
-        <div class="subtitle people">▶ Groupe : <span id="group" class="item"></span></div>
-        <div class="subtitle people">▶ Scolarité : <span href="#" id="education" class="item"></span></div>
-        <div class="subtitle people">▶ Parti politique d’origine : <span href="#" id="political party" class="item"></span></div>
-        <div class="subtitle people">▶ Religion : <span id="religion" class="item"></span></div>
-        <div class="subtitle people">▶ <i>Faits &amp; Documents</i> :<span id="reference" class="item"></span></div>
+        <div class="subtitle org"><i>Faits &amp; Documents</i><span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
+        <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
+        <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
+        <div class="subtitle people">▶ Parti politique d’origine<span href="#" id="political party" class="item"></span></div>
+        <div class="subtitle people">▶ Religion<span id="religion" class="item"></span></div>
+        <div class="subtitle people">▶ <i>Faits &amp; Documents</i><span id="reference" class="item"></span></div>
     </div>
     <div class="container centered">
         <div id="myGraph"></div>
