--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Chart</title>
+    <title>Facta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -68,6 +68,7 @@
         .sidenav .title {
             color: #fff;
             padding-left: 15px;
+            padding-bottom: 50px;
             font-size: 24px;
             font-family: 'Oswald', sans-serif;
         }
@@ -81,7 +82,7 @@
             top: 0;
             right: 25px;
             font-size: 36px;
-            margin-right: 50px;
+            margin-right: 5px;
         }
 
         #main {
