--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
         }
 
         .node-circle:hover {
-            fill: #fff;
             stroke-width: 3px;
             cursor: pointer;
         }
 
         circle.node-organization {
-            fill: #000;
             stroke: #000;
         }
 
         circle.node-people {
-            fill: #fff;
             stroke: black;
         }
 
@@ -93,6 +90,10 @@
         @media screen and (max-height: 450px) {
             .sidenav {padding-top: 15px;}
             .sidenav a {font-size: 18px;}
+        }
+
+        path.hull {
+            fill-opacity: 0.3;
         }
     </style>
 </head>
