--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
         <div class="subtitle people">▶ Parti politique d’origine<span href="#" id="political party" class="item"></span></div>
         <div class="subtitle people">▶ Religion<span id="religion" class="item"></span></div>
-        <div class="subtitle people">▶ <i>Faits &amp; Documents</i><span href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank" id="reference" class="item"></span></div>
+        <div class="subtitle people">▶ <i href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Faits &amp; Documents</i><span id="reference" class="item"></span></div>
     </div>
     <div class="container centered">
         <div id="myGraph"></div>
