--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             font-size: 36px;
         }
 
+        .sidenav a {
+            color: #fff;
+            
+        }
+
         #main {
             transition: margin-right .3s;
             padding: 16px;
@@ -104,17 +109,17 @@
 </head>
 
 <body translate="no">
-    <div id="logo"><img src="img/logo.png" alt="Faits &amp; Documents"></div>
+    <div id="logo"><a href="https://www.faitsetdocuments.com" target="_blank"><img src="img/logo.png" alt="Faits &amp; Documents"></a></div>
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="subtitle org"><i>Faits &amp; Documents</i><span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle org"><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span href="#" id="referenceOrg" class="item"></span></div>
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
         <div class="subtitle people">▶ Parti politique d’origine<span href="#" id="political party" class="item"></span></div>
         <div class="subtitle people">▶ Religion<span id="religion" class="item"></span></div>
-        <div class="subtitle people">▶ <i href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Faits &amp; Documents</i><span id="reference" class="item"></span></div>
+        <div class="subtitle people"><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>▶ Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
     </div>
     <div class="container centered">
         <div id="myGraph"></div>
