--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         .sidenav a {
             color: #fff;
-            
+
         }
 
         #main {
@@ -113,7 +113,7 @@
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="subtitle org"><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle org"><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>▶ Faits &amp; Documents</i></a><span href="#" id="referenceOrg" class="item"></span></div>
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
