--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #FAFAFA;
+            background-color: #fff;
         }
 
         svg {
-            background-color: #FAFAFA;
+            background-color: #fff;
         }
 
         .sidenav h1 {
@@ -71,7 +71,7 @@
         }
 
         .sidenav .item:hover, .sidenav .closebtn:hover {
-            color: #f1f1f1;
+            color: #fff;
         }
 
         .sidenav .closebtn {
