--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="subtitle org"><i>▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Faits &amp; Documents</a></i><span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle org">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span href="#" id="referenceOrg" class="item"></span></div>
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
         <div class="subtitle people">▶ Parti politique d’origine<span href="#" id="political party" class="item"></span></div>
         <div class="subtitle people">▶ Religion<span id="religion" class="item"></span></div>
-        <div class="subtitle people"><i>▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Faits &amp; Documents</a></i><span id="reference" class="item"></span></div>
+        <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
     </div>
     <div class="container centered">
         <div id="myGraph"></div>
