--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
-        <div class="subtitle people">▶ Parti politique d’origine<span href="#" id="political party" class="item"></span></div>
+        <div class="subtitle people">▶ Parti politique<span href="#" id="political party" class="item"></span></div>
         <div class="subtitle people">▶ Religion<span id="religion" class="item"></span></div>
         <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
     </div>
