--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         svg.tooltip-shadow-wrapper-svg {
             position: absolute;
-            left: -400px;
+            text-align: center;
         }
 
         .sidenav h1 {
