--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         svg.tooltip-shadow-wrapper-svg {
             position: absolute;
             text-align: center;
+            left: -300px;
         }
 
         .sidenav h1 {
