--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body translate="no">
     <div id="logo"><a href="https://www.faitsetdocuments.com" target="_blank"><img src="img/logo.png" alt="Faits &amp; Documents"></a></div>
     <div class="toggle-button-container">
-        <button class="toggle-button">
+        <button class="toggle-button" data-mode="first" id="viewToggler">
             Toggle
         </button>
     </div>
