--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="logo"><a href="https://www.faitsetdocuments.com" target="_blank"><img src="img/logo.png" alt="Faits &amp; Documents"></a></div>
     <div class="toggle-button-container">
         <button class="toggle-button" data-mode="first" id="viewToggler">
-            Toggle
+          Réseaux
         </button>
     </div>
     <div id="sidenav" class="sidenav">
