--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="font-awesome/css/all.css" rel="stylesheet">
 
 </head>
 
@@ -30,16 +30,11 @@
           <a class="navbar-brand" href="https://www.faitsetdocuments.com" target="_blank">
             <img src="img/logo.png" height="50" class="d-inline-block align-top" alt="Faits &amp; Documents">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto navbar-right">
-              <li class="nav-item"><a href="#">Abonnez-vous</a></li>
-              <li><a href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
-              <li><a href="https://twitter.com/faitsetdocs" target="_blank"><i class="fa fa-twitter fa-lg"></i></a></li>
-            </ul>
-          </div>
+          <ul class="navbar-nav ml-auto navbar-right">
+            <li class="nav-item"><a href="#">Abonnez-vous</a></li>
+            <li><a href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          </ul>
       </div>
     </nav>
 
