--- a/index.html
+++ b/index.html
@@ -25,16 +25,26 @@
 <body translate="no">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
       <div class="container-fluid">
-          <a class="navbar-brand" href="https://www.faitsetdocuments.com" target="_blank">
-            <img src="img/logo.png" height="50" class="d-inline-block align-top" alt="Faits &amp; Documents">
+          <a class="navbar-brand" href="http://www.faitsetdocuments.com" target="_blank">
+            <img src="img/logo.png" width="138" height="30" alt="Faits &amp; Documents">
           </a>
-          <ul class="navbar-nav ml-auto navbar-right">
-            <li class="nav-item"><a href="#">Abonnez-vous</a></li>
-            <li><a href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          </ul>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav bd-navbar-nav flex-row">
+              <li><a class="nav-item nav-link" href="#">Gouvernement</a></li>
+              <li><a class="nav-item nav-link" href="#">Assemblée nationale</a></li>
+              <li><a class="nav-item nav-link" href="#">Sénat</a></li>
+            </ul>
+            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+              <li><a class="nav-item nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
+              <li><a class="nav-item nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a class="nav-item nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+        </div>
       </div>
     </nav>
 
