--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <!-- Custom Theme CSS -->
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="font-awesome/css/all.css" rel="stylesheet">
 
 </head>
@@ -44,7 +43,7 @@
               <li><a class="nav-item nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
               <li><a class="nav-item nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
-        </div>
+          </div>
       </div>
     </nav>
 
@@ -61,10 +60,11 @@
     </div>
 
     <!-- Page Content -->
-    <div class="centered mw-100">
+    <div class="centered">
         <div id="myGraph"></div>
     </div>
 
+    <!-- Button -->
     <div class="toggle-button-container">
         <button class="toggle-button" data-mode="first" id="viewToggler">
           Réseaux
