--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="libs/d3.v5.min.js"></script>
-    <script src="libs/tooltip.js"></script>
-    <script src="scripts/d3script.js"></script>
+    <script src="libs/d3.v3.min.js"></script>
+    <script src="libs/d3-queue.v3.min.js"></script>
+    <script src="scripts/graphic.js"></script>
     <script src="scripts/main.js"></script>
-
 </body>
 
 </html>
