--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active"><a class="nav-link" href="#">Gouvernement</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Assemblée nationale</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Sénat</a></li>
+          <li class="nav-item active area-select"><a class="nav-link area-link" href="#" data-area="Gouvernement">Gouvernement</a></li>
+          <li class="nav-item area-select"><a class="nav-link area-link" href="#" data-area="Assemblée nationale">Assemblée nationale</a></li>
+          <li class="nav-item area-select"><a class="nav-link area-link" href="#" data-area="Sénat">Sénat</a></li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
