--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav top-buttons">
           <li class="nav-item active area-select"><a class="nav-link area-link" href="#" data-area="Gouvernement">Gouvernement</a></li>
           <li class="nav-item area-select"><a class="nav-link area-link" href="#" data-area="Assemblée nationale">Assemblée nationale</a></li>
           <li class="nav-item area-select"><a class="nav-link area-link" href="#" data-area="Sénat">Sénat</a></li>
