--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <script src="libs/d3-queue.v3.min.js"></script>
     <script src="scripts/graphic.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 </body>
 
 </html>
