--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<html>
-
 <head>
-
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Cartographie">
     <meta name="author" content="Faits &amp; Documents">
 
     <title>Cartographie</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom Theme CSS -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
     <link href="font-awesome/css/all.css" rel="stylesheet">
-
 </head>
 
 <body translate="no">
@@ -73,8 +70,8 @@
     <script src="libs/d3-queue.v3.min.js"></script>
     <script src="scripts/graphic.js"></script>
     <script src="scripts/main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 </body>
 
 </html>
