active buttons fix

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav nav-tabs navbar-nav top-buttons" role="tablist">
-          <li class="nav-item active area-select">
-            <a class="nav-link area-link" id="first-tab" data-area="Gouvernement" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">Gouvernement</a>
+          <li class="nav-item area-select">
+            <a class="nav-link area-link active" id="first-tab" data-area="Gouvernement" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">Gouvernement</a>
           </li>
           <li class="nav-item area-select">
             <a class="nav-link area-link" id="second-tab" href="#second" data-area="Assemblée nationale" data-toggle="tab" role="tab" aria-controls="second" aria-selected="false">Assemblée nationale</a>
