--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 
     <title>Cartographie</title>
 
+    <meta property="og:url" content="https://faitsetdocuments.com/cartographie">
+    <meta property="og:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png">
+    <meta property="og:title" content="Faits &amp; Documents" />
+    <meta property="og:description" content="Cartographie">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1352">
+    <meta property="og:image:height" content="350">
+    <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@dexterafrance" />
+    <meta property="twitter:title" content="Faits &amp; Documents" />
+    <meta property="twitter:description" content="Cartographie" />
+    <meta property="twitter:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png" />
+
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
