--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image:height" content="350">
     <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@dexterafrance" />
+    <meta name="twitter:site" content="@faitsetdocs" />
     <meta property="twitter:title" content="Faits &amp; Documents" />
     <meta property="twitter:description" content="Cartographie" />
     <meta property="twitter:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png" />
