--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="sidenav" class="sidenav">
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="portrait text-center"><img id="node" class="img-thumbnail" src="img/portraits/Jean-Luc Mélenchon.jpg" width="150" height="192" alt=""></div>
+        <div class="portrait text-center"><img id="node" class="img-thumbnail" src="img/portraits/.jpg" width="150" height="192" alt=""></div>
         <div class="subtitle org">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span href="#" id="referenceOrg" class="item"></span></div>
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
