--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fa fa-commenting"></i></a></li>
           <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
           <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
         </ul>
@@ -74,7 +75,7 @@
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
-        <div class="subtitle people">▶ Parti politique<span href="#" id="political_party" class="item"></span></div>
+        <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
         <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
     </div>
 
