--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Custom Theme CSS -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link href="font-awesome/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -59,7 +59,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fa fa-commenting"></i></a></li>
+          <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
           <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
           <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
         </ul>
