--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <h1 id="node" class="title"></h1>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="portrait text-center"><img id="portrait" class="d-none img-thumbnail" src="./img/portraits/Adrien Morenas.jpg" alt=""></div>
-        <div class="subtitle org">▶ <i>Faits &amp; Documents</i> — <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Commander les numéros</a><span href="#" id="referenceOrg" class="item"></span></div>
+        <div class="subtitle org">▶ <i>Faits &amp; Documents</i><span id="referenceOrg" class="item"><br><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Commander les numéros</a></span></div>
         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
         <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
-        <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
+        <div class="subtitle people">▶ <i>Faits &amp; Documents</i><span id="reference" class="item"><br><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank">Commander les numéros</a></span></div>
     </div>
 
     <!-- Page Content -->
