--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <link rel="stylesheet" href="css/main.css">
       <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
       <!-- Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -72,7 +72,7 @@
          <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
          <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
          <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
-         <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
+         <div class="subtitle people">▶ Portrait dans <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
       </div>
       <!-- Page Content -->
       <div class="tab-content" id="pageContent">
