--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <!-- Button -->
       <div class="toggle-button-container">
-         <input type="checkbox" checked data-toggle="toggle" data-on="Cartographie" data-off="Réseaux" data-onstyle="primary" data-offstyle="light">
+         <!--<input type="checkbox" checked data-toggle="toggle" data-on="Cartographie" data-off="Réseaux" data-onstyle="primary" data-offstyle="light">-->
          <button class="toggle-button" data-mode="first" id="viewToggler">
          Réseaux
          </button>
