--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
          <div class="subtitle org">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="referenceOrg" class="item"></span><br><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i></i></a></div>
          <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
          <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
+         <div class="subtitle people">▶ Membre<span id="membership" class="item"></span></div>
          <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
          <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
          <div class="subtitle people">▶ Portrait dans <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
