--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <title>Cartographie</title>
       <meta property="og:url" content="https://faitsetdocuments.com/cartographie">
       <meta property="og:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png">
-      <meta property="og:title" content="Faits &amp; Documents" />
+      <meta property="og:title" content="Cartographie | Faits &amp; Documents" />
       <meta property="og:description" content="Cartographie">
       <meta property="og:image:type" content="image/png">
       <meta property="og:image:width" content="1352">
@@ -17,7 +17,7 @@
       <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:site" content="@faitsetdocs" />
-      <meta property="twitter:title" content="Faits &amp; Documents" />
+      <meta property="twitter:title" content="Cartographie | Faits &amp; Documents" />
       <meta property="twitter:description" content="Cartographie" />
       <meta property="twitter:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png" />
       <!-- Bootstrap CSS -->
