--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <!-- Custom Theme CSS -->
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/mobile.css">
       <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
