--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
       <meta name="author" content="Faits &amp; Documents">
       <title>Cartographie</title>
       <meta property="og:url" content="https://faitsetdocuments.com/cartographie">
-      <meta property="og:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png">
+      <meta property="og:image" content="http://cartographie.faitsetdocuments.com/img/faitsetdocuments.jpg">
       <meta property="og:title" content="Cartographie | Faits &amp; Documents" />
       <meta property="og:description" content="Cartographie">
-      <meta property="og:image:type" content="image/png">
-      <meta property="og:image:width" content="1352">
-      <meta property="og:image:height" content="350">
+      <meta property="og:image:type" content="image/jpg">
+      <meta property="og:image:width" content="1200">
+      <meta property="og:image:height" content="630">
       <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:site" content="@faitsetdocs" />
       <meta property="twitter:title" content="Cartographie | Faits &amp; Documents" />
       <meta property="twitter:description" content="Cartographie" />
-      <meta property="twitter:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png" />
+      <meta property="twitter:image" content="http://cartographie.faitsetdocuments.com/img/faitsetdocuments.jpg" />
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <!-- Custom Theme CSS -->
