--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
       <meta name="description" content="Cartographie">
       <meta name="author" content="Faits &amp; Documents">
       <title>Cartographie</title>
-      <meta property="og:url" content="https://faitsetdocuments.com/cartographie">
+      <meta property="og:url" content="http://cartographie.faitsetdocuments.com">
       <meta property="og:image" content="http://cartographie.faitsetdocuments.com/img/faitsetdocuments.jpg">
       <meta property="og:title" content="Cartographie | Faits &amp; Documents" />
       <meta property="og:description" content="Cartographie">
       <meta property="og:image:type" content="image/jpg">
       <meta property="og:image:width" content="1200">
       <meta property="og:image:height" content="630">
-      <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
+      <meta property="og:url" content="http://cartographie.faitsetdocuments.com" />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:site" content="@faitsetdocs" />
       <meta property="twitter:title" content="Cartographie | Faits &amp; Documents" />
