--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
-               <li class="nav-item"><a class="nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
+               <li class="nav-item"><a class="nav-link" href="https://faitsetdocuments.com/index.html#abonnez" target="_blank">Abonnez-vous</a></li>
                <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
                <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -68,13 +68,13 @@
          <h1 id="node" class="title"></h1>
          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
          <div class="portrait text-center"><img id="portrait" class="d-none img-thumbnail" src="./img/portraits/Adrien Morenas.jpg" alt=""></div>
-         <div class="subtitle org">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="referenceOrg" class="item"></span><br><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i></i></a></div>
+         <div class="subtitle org">▶ <a href="https://faitsetdocuments.com/anciens-numeros.php" target="_blank"><i>Faits &amp; Documents</i></a><span id="referenceOrg" class="item"></span><br><a href="https://faitsetdocuments.com/anciens-numeros.php" target="_blank"><i></i></a></div>
          <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
          <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
          <div class="subtitle people">▶ Groupe d'études et d'amitié<span id="membership" class="item"></span></div>
          <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
          <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
-         <div class="subtitle people">▶ Portrait dans <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
+         <div class="subtitle people">▶ Portrait dans <a href="https://faitsetdocuments.com/anciens-numeros.php" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
       </div>
       <!-- Page Content -->
       <div class="tab-content" id="pageContent">
