--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
       <!-- Custom Theme CSS -->
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/mobile.css">
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
+      <link rel="apple-touch-icon" sizes="57x57" href="http://faitsetdocuments.com/img/apple-touch-icon-57x57.png">
+	  <link rel="apple-touch-icon" sizes="60x60" href="http://faitsetdocuments.com/img/apple-touch-icon-60x60.png">
+	  <link rel="apple-touch-icon" sizes="72x72" href="http://faitsetdocuments.com/img/apple-touch-icon-72x72.png">
+	  <link rel="apple-touch-icon" sizes="76x76" href="http://faitsetdocuments.com/img/apple-touch-icon-76x76.png">
+	  <link rel="apple-touch-icon" sizes="114x114" href="http://faitsetdocuments.com/img/apple-touch-icon-114x114.png">
+	  <link rel="apple-touch-icon" sizes="120x120" href="http://faitsetdocuments.com/img/apple-touch-icon-120x120.png">
+	  <link rel="apple-touch-icon" sizes="144x144" href="http://faitsetdocuments.com/img/apple-touch-icon-144x144.png">
+	  <link rel="apple-touch-icon" sizes="152x152" href="http://faitsetdocuments.com/img/apple-touch-icon-152x152.png">
+	  <link rel="apple-touch-icon" sizes="180x180" href="http://faitsetdocuments.com/img/apple-touch-icon-180x180.png">
+	  <link rel="icon" type="image/png" href="http://faitsetdocuments.com/img/favicon-32x32.png" sizes="32x32">
+	  <link rel="icon" type="image/png" href="http://faitsetdocuments.com/img/favicon-194x194.png" sizes="194x194">
+	  <link rel="icon" type="image/png" href="http://faitsetdocuments.com/img/favicon-96x96.png" sizes="96x96">
+	  <link rel="icon" type="image/png" href="http://faitsetdocuments.com/img/android-chrome-192x192.png" sizes="192x192">
+	  <link rel="icon" type="image/png" href="http://faitsetdocuments.com/img/favicon-16x16.png" sizes="16x16">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
@@ -39,7 +52,9 @@
    <body translate="no">
       <!-- Navigation -->
       <nav class="navbar navbar-light fixed-top navbar-expand-md">
-         <a class="navbar-brand" href="#"><img src="img/logo.png" width="138" height="30" alt="Faits &amp; Documents"></a>
+      	 <div class="navbar-header">
+            <a class="navbar-brand" href="#"><img src="img/logo.svg"></a>
+         </div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
          </button>
