--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                <li class="nav-item"><a class="nav-link" href="https://faitsetdocuments.com/index.html#abonnez" target="_blank">Abonnez-vous</a></li>
-               <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
+               <!--<li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>-->
                <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
+               <li class="nav-item"><a class="nav-link" href="https://vk.com/faitsetdocuments" target="_blank"><i class="fab fa-vk"></i></a></li>
+               <li class="nav-item"><a class="nav-link" href="https://t.me/faitsetdocuments" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
          </div>
       </nav>
