--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
                <li class="nav-item"><a class="nav-link" href="https://vk.com/faitsetdocuments" target="_blank"><i class="fab fa-vk"></i></a></li>
                <li class="nav-item"><a class="nav-link" href="https://t.me/faitsetdocuments" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+               <li class="nav-item"><a class="nav-link" href="https://gab.com/faitsetdocuments" target="_blank"><span class="iconx-gab icon-md"></span></a></li>
             </ul>
          </div>
       </nav>
